# falkordb-import-graphml

./: DX_SUMMARY.md  GRAPHML_FORMAT.md  README.md  example_config.json  example_usage.py  generated_config.json  justfile  pyproject.toml  setup.py
examples/: network_unfiltered.graphml  test_sample.graphml
graphml_to_falkordb/: __init__.py  cli.py  loader.py  migrator.py  parser.py
scripts/: analyse.sh  config.sh  migrate.sh
