[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphml-to-falkordb"
version = "0.1.0"
description = "Migrate GraphML files to FalkorDB"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
dependencies = [
    "networkx>=2.6",
    "falkordb>=1.1.0",
    "redis>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
graphml-to-falkordb = "graphml_to_falkordb.cli:main"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "W"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
